--- a/index.html
+++ b/index.html
@@ -1,16 +1,101 @@
 <!doctype html>
 
 <html lang="en">
+
 <head>
   <meta charset="utf-8">
-  <title>Great Idea - Responsive I</title>
+
+  <title>Great Idea!</title>
 
   <link href="https://fonts.googleapis.com/css?family=Bangers|Titillium+Web" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/index.css">
 
+  <!--[if lt IE 9]>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/html5shiv/3.7.3/html5shiv.js"></script>
+  <![endif]-->
 </head>
 
 <body>
-<!-- Use past code you created here for Great Idea Web Page or past solution for Great Idea Web Page HTML here! -->
+
+  <!-- Copy and paste your HTML from the first UI project here -->
+  <div class="container">
+    <div class="flex-nav">
+      <nav class="nav">
+        <ul class="menu">
+          <li class="menu-item"><a href="services.html">Services</a></li>
+          <li class="menu-item"><a href="#">Product</a></li>
+          <li class="menu-item"><a href="#">Vision</a></li>
+          <li class="menu-item"><a href="#">Features</a></li>
+          <li class="menu-item"><a href="#">About</a></li>
+          <li class="menu-item"><a href="#">Contact</a></li>
+        </ul>
+      </nav>
+      <div class="logo-image">
+        <img class="logo" src="img/logo.png" alt="Great Idea! Company logo."></div>
+    </div>
+    <!--- flex-nav -->
+    <div class="intro">
+      <h1>Innovation
+        On
+        Demand
+      </h1>
+      <button class="get-started"> Get Started</button>
+
+      <div class="code-image">
+        <img src="img/header-img.png" alt="Image of a code snippet.">
+      </div>
+    </div>
+    <div class="border"></div>
+    <!--this div is for border-->
+    <div class="flex-top">
+      <section class="feature">
+        <h2>Features</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+
+      <section class="about">
+        <h2>About</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    </section>
+
+    <section class="mid-section">
+      <img class="middle-img" src="img/mid-page-accent.jpg" alt="Image of code snippets across the screen">
+    </section>
+    <div class="flex-bottom">
+      <section class="service">
+        <h2>Services</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+
+      <section class="product">
+        <h2>Product</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+      </section>
+
+      <section class="vision">
+        <h2>Vision</h2>
+        <p>Aliquam elementum magna eros, ac posuere elvit tempus et. Suspendisse vel tempus odio, in interdutm nisi.
+          Suspendisse eu ornare nisl. Nullam convallis augue justo, at imperdiet metus scelerisque quis.</p>
+    </div>
+    </section>
+    <div class="border"></div>
+    <footer>
+      <address>
+        <h5>Contact</h5>
+        123 Way 456 Street
+        Somewhere, USA
+        <p>1 (888) 888-8888</p>
+        sales@greatidea.io
+      </address>
+      <p class="copyright">&copy; Great Idea! 2018</p>
+    </footer>
+  </div>
 </body>
+
 </html>
